# ros-bag-extractor

./: LICENSE  README.md  pyproject.toml
configs/devel/: setup.sh
configs/devel/templates/: setup_template.sh
configs/scripts/sh/: format_all.sh  functions.sh  install.sh  pylint.sh  pylint_cicd.sh
src/: main.py
src/rbe/: main.py
src/rbe/sensors/: gps.py  image.py  imu.py  ins.py  lidar.py  pose.py
src/rbe/utils/: multiprocessors.py  pose.py  tools.py
src/sensors/: base.py  gps.py  image.py  imu.py  lidar.py  pose.py
src/utils/: tools.py
